Refactoring di PipelineProtocol, aggiunta di Strategy per il routing